--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
     "resizer"
   ],
   "devDependencies": {
+    "@changesets/cli": "^2.26.1",
     "@types/cli-progress": "^3.11.0",
     "@types/node": "^18.15.11",
     "@types/sharp": "^0.31.1",
     "@types/yargs": "^17.0.24",
+    "cli-progress": "^3.12.0",
+    "colors": "^1.4.0",
     "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.7",
-    "typescript": "^5.0.3",
-    "cli-progress": "^3.12.0",
-    "colors": "^1.4.0",
     "path": "^0.12.7",
+    "prettier": "^2.8.7",
     "sharp": "^0.32.0",
+    "typescript": "^5.0.3",
     "yargs": "^17.3.1"
   }
 }
