--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "resizer"
   ],
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
     "@types/cli-progress": "^3.11.0",
     "@types/node": "^18.15.11",
