--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "A command line utility to resize and optimize images",
   "author": "Reza Rahman",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "./scripts/build.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "changeset publish"
   },
