--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.2",
   "description": "A command line utility to resize and optimize images",
   "author": "Reza Rahman",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "files": [
     "dist"
   ],
