--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "batch",
     "resizer"
   ],
+  "dependencies": {
+    "cli-progress": "^3.12.0",
+    "colors": "^1.4.0",
+    "sharp": "^0.32.0",
+    "yargs": "^17.3.1"
+  },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
@@ -29,16 +35,11 @@
     "@types/node": "^18.15.11",
     "@types/sharp": "^0.31.1",
     "@types/yargs": "^17.0.24",
-    "cli-progress": "^3.12.0",
-    "colors": "^1.4.0",
     "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "path": "^0.12.7",
     "prettier": "^2.8.7",
-    "sharp": "^0.32.0",
-    "typescript": "^5.0.3",
-    "yargs": "^17.3.1"
+    "typescript": "^5.0.3"
   }
 }
