--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "./scripts/build.sh",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "release": "changeset publish"
   },
   "main": "dist/index.js",
@@ -31,15 +31,21 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
+    "@jest/globals": "^29.5.0",
     "@types/cli-progress": "^3.11.0",
+    "@types/mock-fs": "^4.13.1",
     "@types/node": "^18.15.11",
     "@types/sharp": "^0.31.1",
     "@types/yargs": "^17.0.24",
+    "cypress": "^12.9.0",
     "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "mock-fs": "^5.2.0",
     "prettier": "^2.8.7",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   }
 }
